--- a/documentation/LaTeX dokumentacija/literatura.bib
+++ b/documentation/LaTeX dokumentacija/literatura.bib
@@ -97,9 +97,18 @@
 	Year = {2012}}
 
 @MISC{corpus,
-Author = {Paolo Ferragina; Giovanni Manzini},
-Month = {December},
-Year = {2013},
-Title = {Pizza\&{C}hili {C}orpus, {C}ompressed Indexes and their Testbeds},
-howpublished={\url{http://pizzachili.dcc.uchile.cl/texts.html}},
-}
+	Author = {Paolo Ferragina; Giovanni Manzini},
+	Month = {December},
+	Year = {2013},
+	Title = {Pizza\&{C}hili {C}orpus, {C}ompressed Indexes and their Testbeds},
+	howpublished={\url{http://pizzachili.dcc.uchile.cl/texts.html}}}
+
+@MISC{alexRRR,
+	Author = {Alex Bowe},
+	Month = {November},
+	Year = {2013},
+	Title = {{RRR} – A Succinct Rank/Select Index for Bit Vectors},
+	howpublished={\url{http://alexbowe.com/rrr}}}	
+	
+	
+	
