--- a/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
+++ b/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
@@ -1,4 +1,4 @@
-U ovom poglavlju upisani su algoritmi koji su potrebni za konstruiranje i korištenje FM-indeksa u svrhu prebrojavanja broja ponavljanja nekog podniza unutar zadanog niza nad kojim je konstruiran FM-indeks. Opisani su algoritmi Burrows-Wheeler transformacije, wavelet stabla i RRR strukture.
+U ovom poglavlju opisani su algoritmi koji su potrebni za konstruiranje i korištenje FM-indeksa u svrhu prebrojavanja broja ponavljanja nekog podniza unutar zadanog niza nad kojim je konstruiran FM-indeks. Opisani su algoritmi Burrows-Wheeler transformacije, wavelet stabla i RRR strukture.
 
 
 \section{Burrows-Wheeler transformacija}
@@ -49,9 +49,9 @@ Prvo ćemo proučiti jedan tip algoritma za sortiranje koji se temelji na quick 
 
 Bitno je za napomenuti da je zbog ilustracije rad algoritam prikazan na nezavisnim nizovima (kao da smo prvo napravili sve rotacije osnovnog niza i onda njih sortirali). Naravno u implementaciji to nije tako napravljeno, već postoji niz brojeva koji predstavljaju pokazivače (odnosno indekse pošto pokazivači ne postoje u programskom jeziku Java) na elemente ulaznog polja. Onda umjesto da se zamjenjuju čitavi nizovi jednostavno se zamijene pokazivači u tom polju.
 
-Prednost ovog postupka su prije svega njegova jednostavnost. Sam algoritam je veoma intuitivan i nije ga teško razumjeti. Druga, mnogo očitija prednost jest mogućnost paralelizacije ovog algoritma. Kako je ranije navedeno, nizovi su na kraju podijeljeni u tri nezavisne grupe, od kojih se svaka sortira nezavisno. To znači da bi teoretski svaku ovu grupu mogli sortirati međusobno paralelno. Nažalost zbog veoma loše implementacije paralelnih mehanizama u programskom jeziku Javi , ovo ipak nije napravljeno. No kada bi implementacija bila napravljena u nekom programskom jeziku koji je više specijaliziran za paralelizaciju to bi bilo dobro napraviti. Najveći nedostatci ovog postupka su svakako nešto veća složenost naspram konstrukcije BWT-a korištenjem sufiksnog polja, te također rekurzivna priroda algoritma koja zahtijeva puno rekurzivnih poziva i iz tog razloga također i alokaciju veće količine memorije za stog.
+Prednost ovog postupka su prije svega njegova jednostavnost. Sam algoritam je veoma intuitivan i nije ga teško razumjeti. Druga, mnogo očitija prednost jest mogućnost paralelizacije ovog algoritma. Kako je ranije navedeno, nizovi su na kraju podijeljeni u tri nezavisne grupe, od kojih se svaka sortira nezavisno. To znači da bi teoretski svaku ovu grupu mogli sortirati međusobno paralelno. Nažalost zbog veoma loše implementacije paralelnih mehanizama u programskom jeziku Javi, ovo ipak nije napravljeno. No kada bi implementacija bila napravljena u nekom programskom jeziku koji je više specijaliziran za paralelizaciju to bi bilo dobro napraviti. Najveći nedostatci ovog postupka su svakako nešto veća složenost naspram konstrukcije BWT-a korištenjem sufiksnog polja, te također rekurzivna priroda algoritma koja zahtijeva puno rekurzivnih poziva i iz tog razloga također i alokaciju veće količine memorije za stog.
 
-Iako se ovdje radi o veoma zanimljivom algoritmu (algoritmu koji nije naravno primjenjiv samo na pronalazak BWT transformacije), nažalost pokazao se je kao prespor u usporedbi s izračunavanjem BWT transformacije korištenjem sufiksnog polja i it tog razloga se dalje više neće razmatrati.
+Iako se ovdje radi o veoma zanimljivom algoritmu (algoritmu koji nije naravno primjenjiv samo na pronalazak BWT transformacije), on se nažalost pokazao presporim u usporedbi s izračunavanjem BWT transformacije korištenjem sufiksnog polja te se tog razloga dalje više neće razmatrati.
 
 \subsection{Konstrukcija sufiksnog polja}
 Sufiksno polje jest jednostavna struktura podataka koje je sastavljena od niza cijelih brojeva koji sadrže početna mjesta abecedno poredanih sufiksa nekog niza. Dobra stvar kod sufiksnog polja jest da se iz njega može izračunati BWT transformacija u linearnom vremenu. Još veća prednost ovakvog postupka jest da se sufiksno polje isto tako može konstruirati u linearnom vremenu. Iako postoje mnogi algoritmi za konstrukciju sufiksnih polja, u ovoj implementaciji iskorišten je algoritam koji je predložen u \cite{sais1} i \cite{sais2}. 
@@ -74,7 +74,7 @@ Prvo je potrebno svim znakovima odrediti jesu li to S-znakovi, L-znakovi ili LMS
 Prije početka prvog koraka pretpostavimo da svi pokazivači na pretince pokazuju na krajeve tih pretinaca, i neka su vrijednosti elemenata sufiksnog polja inicijalno postavljene na vrijednost 0. Prvi korak se sastoji od toga da prođemo kroz niz i da sve LMS-znakove stavimo u odgovarajući pretinac (smjer prolaska kroz niz je u potpunosti nebitan, može se prolaziti od početka ili od kraja niza). Kada stavimo LMS-znak u odgovarajući pretinac potrebno je pokazivač na taj pretinac smanjiti tako da pokazuje ne iduće prazno mjesto. Ovaj korak algoritma detaljno je prikazan na slici \ref{fig:sais1}.
 
 
-Prije početka drugog koraka potrebno je pokazivače postaviti na početke svih pretinaca. Drugi korak algoritma jest induciranje L-znakova. U ovom koraku prolazimo kroz sufiksno polje s lijeva na desno i za svaki element koji je veći od 0, dakle za elemente za koje vrijedi $SA[i]>0$, obavljamo postupak indukcije. Svaki taj  element zapravo predstavlja indeks nekog znaka u ulaznom nizu. Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan L-znak. Mnogo jednostavnije rečeno  ispitujemo da li je znak $S[SA[i]]$ L-znak, pri čemu je $i$ index elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak L-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i uvećamo pokazivač na taj pretinac. 
+Prije početka drugog koraka potrebno je pokazivače postaviti na početke svih pretinaca. Drugi korak algoritma jest induciranje L-znakova. U ovom koraku prolazimo kroz sufiksno polje s lijeva na desno i za svaki element koji je veći od 0, dakle za elemente za koje vrijedi $SA[i]>0$, obavljamo postupak indukcije. Svaki taj  element zapravo predstavlja indeks nekog znaka u ulaznom nizu. Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan L-znak. Mnogo jednostavnije rečeno  ispitujemo da li je znak $S[SA[i]]$ L-znak, pri čemu je $i$ indeks elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak L-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i uvećamo pokazivač na taj pretinac. 
 
 
 
@@ -94,21 +94,21 @@ Prije početka drugog koraka potrebno je pokazivače postaviti na početke svih 
  \label{fig:sais2}
 \end{figure}
 
-Prije početka treće i posljednje faze induciranog sortiranja moramo pokazivače postaviti na kraj pretinaca. Treći dio induciranog sortiranja je veoma sličan drugom koraku. Kroz sufiksno polje se ovaj puta prolazi od kraja prema početku. Opet izostavljamo elemente koji su jednaki 0.  Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza, koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan, S-znak, odnosno ispitujemo da li je znak $S[SA[i]]$ S-znak, pri čemu je $i$ index elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak S-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i smanjimo vrijednost pokazivača na taj pretinac. 
+Prije početka treće i posljednje faze induciranog sortiranja moramo pokazivače postaviti na kraj pretinaca. Treći dio induciranog sortiranja je veoma sličan drugom koraku. Kroz sufiksno polje se ovaj puta prolazi od kraja prema početku. Opet izostavljamo elemente koji su jednaki 0.  Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza, koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan, S-znak, odnosno ispitujemo da li je znak $S[SA[i]]$ S-znak, pri čemu je $i$ indeks elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak S-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i smanjimo vrijednost pokazivača na taj pretinac. 
 
 \begin{figure}[H]
    \centering
        \includegraphics{./pictures/SAISstep3.jpg}
- \caption{Trećii korak u induciranom sortiranju}
+ \caption{Treći korak u induciranom sortiranju}
  \label{fig:sais3}
 \end{figure}
 
-S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja središnji dio ovog algoritma za izgradnju sufiksnog polja. Ovim postupkom smo zapravo djelomično sortirali sve LMS-sufikse. Problem nam predstavljaju LMS-sufiksi koji su jednaki, jer njih na ovaj način ne možemo sortirati. Kako bi sortirali LMS-sufikse koji su jednaki moramo još pogledati znakove, odnosno LMS-podnizove koji dolaze iza tih LMS-podnizova. Definirajmo prvo što znači da su dva LMS-podniza jednaka. Dva LMS-podniza su jednaka aku su jednake duljine, ako na istim pozicijama imaju jednake znakove i dodatno ako su znakovi na istim pozicijama u oba niza istog tipa (S-znak ili L-znak). Kako bi odredili njihov poredak moramo vidjeti koji LMS-podniz slijedi nakon tih LMS-podnizova. To veoma lako možemo napraviti na način da svakom sufiksu pridijelimo neku leksičku vrijednost, odnosno neki broj. LMS-sufiksi koji su manji dobit će manju leksičku vrijednost, oni koji su veći dobit će veću leksičku vrijednost, dok će jednaki LMS-podniz dobiti jednake leksičke vrijednosti. Podjela leksičkih vrijednosti pojedinim LMS-podnizovima je prikazana na slici \re{fig:leks}. Na taj način smo originalni niz zamijenili kompaktnijim nizom gdje je svaki LMS-podniz predočen svojom leksičkom vrijednošću. Sada možemo ponoviti cijeli algoritam i na isti način kao i za originalni niz (jer i znakovi su zapravo predstavljeni brojevima, tako da to ništa ne mijenja na stvari) i tako nastavljamo dok ne uspijemo odrediti poredak svih LMS-podnizova. Kada je on određen, induciranim sortiranjem lako dobijemo poredak svih L-sufiksa i S-sufiksa te je time postupak računanja sufiksnog polja dovršen.
+S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja središnji dio ovog algoritma za izgradnju sufiksnog polja. Ovim postupkom smo zapravo djelomično sortirali sve LMS-sufikse. Problem nam predstavljaju LMS-sufiksi koji su jednaki, jer njih na ovaj način ne možemo sortirati. Kako bi sortirali LMS-sufikse koji su jednaki moramo još pogledati znakove, odnosno LMS-podnizove koji dolaze iza tih LMS-podnizova. Definirajmo prvo što znači da su dva LMS-podniza jednaka. Dva LMS-podniza su jednaka su jednake duljine, ako na istim pozicijama imaju jednake znakove i dodatno ako su znakovi na istim pozicijama u oba niza istog tipa (S-znak ili L-znak). Kako bi odredili njihov poredak moramo vidjeti koji LMS-podniz slijedi nakon tih LMS-podnizova. To veoma lako možemo napraviti na način da svakom sufiksu pridijelimo neku leksičku vrijednost, odnosno neki broj. LMS-sufiksi koji su manji dobit će manju leksičku vrijednost, oni koji su veći dobit će veću leksičku vrijednost, dok će jednaki LMS-podniz dobiti jednake leksičke vrijednosti. Podjela leksičkih vrijednosti pojedinim LMS-podnizovima je prikazana na slici \ref{fig:leks}. Na taj način smo originalni niz zamijenili kompaktnijim nizom gdje je svaki LMS-podniz predočen svojom leksičkom vrijednošću. Sada možemo ponoviti cijeli algoritam i na isti način kao i za originalni niz (jer i znakovi su zapravo predstavljeni brojevima, tako da to ništa ne mijenja na stvari) i tako nastavljamo dok ne uspijemo odrediti poredak svih LMS-podnizova. Kada je on određen, induciranim sortiranjem lako dobijemo poredak svih L-sufiksa i S-sufiksa te je time postupak računanja sufiksnog polja dovršen.
 
 \begin{figure}[H]
    \centering
        \includegraphics{./pictures/leksvrij.jpg}
- \caption{Podjela leksičkiv vrijednosti LMS-podnizovima}
+ \caption{Podjela leksičkih vrijednosti LMS-podnizovima}
  \label{fig:leks}
 \end{figure}
 
@@ -116,7 +116,7 @@ S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja sre
 Sada kada smo pogledali sve korake algoritma zasebno, rezimirajmo cjelokupni algoritam još jednom. U prvom koraku je potrebno odrediti tipove svih znakova (da li je pojedini znak L-znak ili S-znak), kao i koji su znakovi LMS-znakovi. Drugi korak algoritma je provođenje induciranog sortiranja nad ulaznim nizom. Time smo dobili međusobno sortirane LMS-podnizove, no bitno je za zapamtiti da su sortirani samo oni koji su međusobno u potpunosti različiti. Ukoliko je dva ili više LMS-podniza u potpunosti jednako (po jednakosti definiranoj ranije), onda ovim korakom nije jednoznačno određen poredak LMS-podnizova, odnosno, oni nisu u potpunosti sortirani. Kako bi odredili poredak LMS-nizova potrebno ih je dodatno sortirati, i to radimo tako da sve LMS-podnizove zamijenimo leksikografskim znakovima po principu da LMS-podnizovi koji se u sortiranom poretku pojavljuju ranije dobe manje leksikografske znakove, jednakim LMS-podnizovima pridijele se jednaki leksikografski znakovi i onim LMS-podnizovima koji se pojavljuju kasnije pridijele veće leksičke vrijednosti. Time smo stvorili novi, reducirani, problem koji možemo riješiti istim postupkom kao i originalni problem. Kada je riješen ovaj reducirani problem, jednoznačno nam je određen poredak LMS-podnizova, i sada ukoliko provedemo ponovno inducirano sortiranje, dobit ćemo sufiksno polje.
 
 
-Kao što vidimo radi se o vrlo jednostavnom, konciznom i elegantnom algoritmu koji u linearnom vremenu može izgraditi sufiksno polje. Teoretski, memorijsko zauzeće algoritma je $O(5n)$, no u implementaciji ono je obično nešto veće zbog dodatnih struktura koje su potrebne za rad algoritma (primjerice polje koje sadrži tipove svih znakova kako se ono ne bi moralo ponovo određivati u pojedinim koracima algoritma). Možda se kao jedan nedostatak algoritma može učiniti to što je potrebno raditi rekurzivne pozive tijekom rješavanja problema, no to obično nije toliki problem koliko se čini jer je najčešće broj rekurzivnih poziva dosta malen, čak i za veće nizove.
+Kao što vidimo radi se o vrlo jednostavnom, konciznom i elegantnom algoritmu koji u linearnom vremenu može izgraditi sufiksno polje. Teoretski, memorijsko zauzeće algoritma je $O(5n)$, no u implementaciji ono je obično nešto veće zbog dodatnih struktura koje su potrebne za rad algoritma (primjerice polje koje sadrži tipove svih znakova kako se ono ne bi moralo ponovo određivati u pojedinim koracima algoritma). Možda se kao jedan nedostatak algoritma može činiti potreba za rekurzivnim pozivim tijekom rješavanja problema, no to obično nije tako veliki problem koliko se čini jer je najčešće broj rekurzivnih poziva dosta malen, čak i za veće nizove.
 
 
 \section{Wavelet stablo}
@@ -152,14 +152,17 @@ Slika \ref{query} prikazuje primjer pronalaska ranga unutar wavelet stabla. Toč
 
 
 \section{RRR struktura}
-RRR struktura je struktura koja za dani niz nula i jedinica proizvoljne duljine vraća broj postavljenih jedinica do određene pozicije. Općenito, za dobivanje broja jedinica u nizu nula i jedinica, potrebno je proći kroz cijeli niz i provjeravati svaki element niza. Takvo prebrojavanje niza odvija se u linearnoj vremenskoj složenosti $O(n)$ gdje je $n$ duljina niza. RRR strukturom se ukupan broj jedinica do određene pozicije u nizu može izračunati u konstantnom vremenu $O(1)$. Također, korištenjem RRR strukture se postiže i implicitna kompresija. 
+RRR struktura je struktura koja za dani niz nula i jedinica proizvoljne duljine vraća broj postavljenih jedinica do određene pozicije. Općenito, za dobivanje broja jedinica u nizu nula i jedinica, potrebno je proći kroz cijeli niz i provjeravati svaki element niza. Takvo prebrojavanje niza odvija se u linearnoj vremenskoj složenosti $O(n)$ gdje je $n$ duljina niza. RRR strukturom se ukupan broj jedinica do određene pozicije u nizu može izračunati u konstantnom vremenu $O(1)$ \cite{rrr1}. Također, korištenjem RRR strukture se postiže i implicitna kompresija \cite{alexRRR}. 
 
 Ideja RRR strukture je da se inicijalno nad nizom konstruiraju blokovi (engl. \textit{buckets}) i nadblokovi (engl. \textit{superbuckets}) u kojima se pohranjuju brojevi jedinica za određene intervale niza. Na taj način se izbjegava pregledavanje cijelog dijela niza u potrazi za brojem jedinica, već je potrebno pregledati samo mali dio niza i određene vrijednosti pohranjene u blokovima i nadbloku. 
 
-RRR struktura implementirana u ovom projektu se djelomično razlikuje od originalne RRR opisane u \cite{rrr1}. U originalnoj RRR strukturi niz je podijeljen u blokove tako da je svaki blok predstavljen parom (SB,B) te su definirane dodatne tri tablice \cite{rrr2}. Implementacija u ovom projektu je nešto drugačije izvedena, ali je zadržala izračun broja jedinica u nizu u konstantnom vremenu te je opisana u nastavku teksta.
+RRR struktura implementirana u ovom projektu se djelomično razlikuje od originalne strukture opisane u \cite{rrr1}. U originalnoj RRR strukturi niz je podijeljen u blokove tako da je svaki blok predstavljen parom (SB,B) te su definirane dodatne tri tablice \cite{rrr2}. Implementacija u ovom projektu je nešto drugačije izvedena, ali je zadržala izračun broja jedinica u nizu u konstantnom vremenu te je opisana u nastavku teksta.
 
 \subsection{Konstruiranje RRR strukture}
-U ovoj implementaciji RRR strukture, niz duljine $n$ se dijelio u blokove veličine $l$ i nadblokove veličine $l^2$, a vrijednost $l$ se pritom izračunavala kao logaritam duljine niza, tj. $l=log_2 n$. Stvorena su polja BS i SBS veličina $\lfloor n/l \rfloor$ i $\lfloor n/l^{2} \rfloor$ za pohranjivanje vrijednosti blokova i nadblokova. Za stvaranje RRR strukture potrebno je proći kroz cijeli niz znamenki. Brojač jedinica je inicijalno postavljen na nula i povećava se kada se prolaskom kroz niz naiđe na element koji ima vrijednost 1. Kada se prođe kroz $l$ elemenata niza, vrijednost brojača pohranjuje se u polje BS kao zbroj vrijednosti stvorenih blokova u još neispunjenom nadbloku. To znači da se blokovi u jednom nadbloku pune kumulativno. Kada se prođe $l^2$ elemenata niza, vrijednost novog nadbloka jednaka je zbroju vrijednosti prošlog nadbloka (ako postoji) i vrijednosti brojača, odnosno zadnjeg konstruiranog bloka. Nakon izračuna vrijednosti nadbloka brojač se postavlja ponovo na vrijednost nula. Primjer ispunjenih vrijednosti u poljima BS i SBS dan je \ref{rrr1}.
+U ovoj implementaciji RRR strukture, niz duljine $n$ se dijelio u blokove veličine $l$ i nadblokove veličine $l^2$. U idućem potpoglavlju opisan je način računanja ranga, odnosno broja jedinica u nizu, te se može vidjeti da je za računanje ranga potrebno slijedno proći kroz najviše $l$ elemenata niza, a budući da je veličina bloka $l$ fiksne duljine, određivanje ranga se računa u konstantnom vremenu. Vrijednost veličine bloka je potrebno pažljivo odrediti jer o njoj ovise i vremenska složenost i memorijsko zauzeće. Već je spomenuto da se u postupku računanja ranga maksimalno mora slijedno proći kroz niz duljine $l$ znakova pa je iz tog razloga poželjno što više smanjiti tu vrijednost. S druge strane, ako su blokovi manje veličine, trebat će se pohranjivati veći broj blokova što uzrokuje veće memorijsko zauzeće. Detaljnija razrada problema kako najbolje odabrati vrijednost veličine bloka (što ovisi i o veličini brojeva koji će se pohranjivati u blokove i nadblokove) opisana je u \cite{fm3}. U ovom radu korištena je veličina bloka l koja se računala kao logaritam duljine niza, tj. $l=log_2 n$. Stvorena su polja BS i SBS veličina 
+$\lfloor n/l \rfloor$ i $\lfloor n/l^{2} \rfloor$ za pohranjivanje vrijednosti blokova i nadblokova. 
+
+Za stvaranje RRR strukture potrebno je proći kroz cijeli niz znamenki. Brojač jedinica je inicijalno postavljen na nula i povećava se kada se prolaskom kroz niz naiđe na element koji ima vrijednost 1. Kada se prođe kroz $l$ elemenata niza, vrijednost brojača pohranjuje se u polje BS kao zbroj vrijednosti stvorenih blokova u još neispunjenom nadbloku. To znači da se blokovi u jednom nadbloku pune kumulativno. Kada se prođe $l^2$ elemenata niza, vrijednost novog nadbloka jednaka je zbroju vrijednosti prošlog nadbloka (ako postoji) i vrijednosti brojača, odnosno zadnjeg konstruiranog bloka. Nakon izračuna vrijednosti nadbloka brojač se postavlja ponovo na vrijednost nula. Primjer ispunjenih vrijednosti u poljima BS i SBS dan je slikom \ref{rrr1}.
 
 \begin{figure}[H]
 \centering
@@ -167,7 +170,7 @@ U ovoj implementaciji RRR strukture, niz duljine $n$ se dijelio u blokove velič
 \caption{Ispunjene vrijednosti u poljima BS i SBS}\label{rrr1}
 \end{figure}
 
-Ukoliko se osvrnemo na primjer wavelet stabla prikazanim u prethodnom poglavlju (\ref{usporedba}), lako možemo izračunati da, ukoliko stablo izgrađujemo originalnim algoritmom, ukupna veličina izgrađenih polja BS i SBS jednaka je 17. Ako se stablo izgradi dijeljenjem abecede na osnovi broja pojavljivanja znakova unutar ulaznog niza, ukupna veličina izgrađenih BS i SBS polja iznosi 14. Već na ovako malom primjeru zamjećuje se poprilična razlika između dobivenih veličina polja BS i SBS.
+Ukoliko se osvrnemo na primjer wavelet stabla prikazanim u prethodnom poglavlju (slika \ref{usporedba}), lako možemo izračunati da, ukoliko stablo izgrađujemo originalnim algoritmom, ukupna veličina izgrađenih polja BS i SBS jednaka je 17. Ako se stablo izgradi dijeljenjem abecede na osnovi broja pojavljivanja znakova unutar ulaznog niza, ukupna veličina izgrađenih BS i SBS polja iznosi 14. Već na ovako malom primjeru zamjećuje se poprilična razlika između dobivenih veličina polja BS i SBS.
 
 
 \subsection{Izračunavanje broja jedinica u nizu}
